// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SelectorButton /> UI snapshots when Icon added displays check mark for checked checkbox 1`] = `
.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
}

.emotion-1 {
  fill: currentColor;
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  cursor: pointer;
}

.emotion-7 {
  margin-left: 1rem;
  margin-top: 0.25rem;
  min-width: 125px;
  text-align: left;
}

.emotion-0 {
  color: #ffffff;
}

.emotion-9 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-bottom: 20px;
}

.emotion-9:focus {
  outline: none;
}

.emotion-9:focus .emotion-6 {
  box-shadow: 0px 0px 0px 2px #ffffff,0px 0px 0px 4px #332e54;
  border-radius: 4px;
}

.emotion-3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 1px solid;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 3rem;
  height: 3rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transition: background-color 350ms;
  transition: background-color 350ms;
  border-radius: 4px;
  background-color: #332e54;
  border-color: #332e54;
}

.emotion-3:active,
.emotion-3:focus {
  outline: none;
}

<div
  aria-checked={true}
  className="emotion-9 emotion-10"
  onClick={[Function]}
  onKeyPress={[Function]}
  role="checkbox"
  tabIndex={0}
>
  <div
    className="emotion-5 emotion-6"
  >
    <div
      className="emotion-1 emotion-2"
      disabled={false}
    >
      <svg
        className="emotion-0"
        height={16}
        width={16}
      />
    </div>
    <div
      checked={true}
      className="emotion-3 emotion-4"
      disabled={false}
      size="large"
      type="primary"
    />
  </div>
  <p
    className="emotion-7 emotion-8"
  >
    SelectorButton Text
  </p>
</div>
`;

exports[`<SelectorButton /> UI snapshots when Icon added displays check mark for checked radio button 1`] = `
.emotion-9 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-bottom: 20px;
}

.emotion-9:focus {
  outline: none;
}

.emotion-9:focus .emotion-6 {
  box-shadow: 0px 0px 0px 2px #ffffff,0px 0px 0px 4px #332e54;
  border-radius: 100%;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
}

.emotion-1 {
  fill: currentColor;
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  cursor: pointer;
}

.emotion-7 {
  margin-left: 1rem;
  margin-top: 0.25rem;
  min-width: 125px;
  text-align: left;
}

.emotion-0 {
  color: #ffffff;
}

.emotion-3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 1px solid;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 3rem;
  height: 3rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transition: background-color 350ms;
  transition: background-color 350ms;
  border-radius: 100%;
  background-color: #332e54;
  border-color: #332e54;
}

.emotion-3:active,
.emotion-3:focus {
  outline: none;
}

<div
  aria-checked={true}
  className="emotion-9 emotion-10"
  onClick={[Function]}
  onKeyPress={[Function]}
  role="radio"
  tabIndex={0}
>
  <div
    className="emotion-5 emotion-6"
  >
    <div
      className="emotion-1 emotion-2"
      disabled={false}
    >
      <svg
        className="emotion-0"
        height={8}
        width={8}
      />
    </div>
    <div
      checked={true}
      className="emotion-3 emotion-4"
      disabled={false}
      size="large"
      type="primary"
    />
  </div>
  <p
    className="emotion-7 emotion-8"
  >
    SelectorButton Text
  </p>
</div>
`;

exports[`<SelectorButton /> UI snapshots when Icon added displays icon for checkbox with size 'large' 1`] = `
.emotion-4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
}

.emotion-0 {
  fill: currentColor;
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  cursor: pointer;
}

.emotion-6 {
  margin-left: 1rem;
  margin-top: 0.25rem;
  min-width: 125px;
  text-align: left;
}

.emotion-8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-bottom: 20px;
}

.emotion-8:focus {
  outline: none;
}

.emotion-8:focus .emotion-5 {
  box-shadow: 0px 0px 0px 2px #ffffff,0px 0px 0px 4px #332e54;
  border-radius: 4px;
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 1px solid;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 3rem;
  height: 3rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transition: background-color 350ms;
  transition: background-color 350ms;
  border-radius: 4px;
  background-color: transparent;
  border-color: #332e54;
}

.emotion-2:active,
.emotion-2:focus {
  outline: none;
}

<div
  aria-checked={false}
  className="emotion-8 emotion-9"
  onClick={[Function]}
  onKeyPress={[Function]}
  role="checkbox"
  tabIndex={0}
>
  <div
    className="emotion-4 emotion-5"
  >
    <div
      className="emotion-0 emotion-1"
      disabled={false}
    >
      <svg
        height={16}
        width={16}
      />
    </div>
    <div
      checked={false}
      className="emotion-2 emotion-3"
      disabled={false}
      size="large"
      type="primary"
    />
  </div>
  <p
    className="emotion-6 emotion-7"
  >
    SelectorButton Text
  </p>
</div>
`;

exports[`<SelectorButton /> UI snapshots when Icon added displays icon for radio button with size 'large' 1`] = `
.emotion-8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-bottom: 20px;
}

.emotion-8:focus {
  outline: none;
}

.emotion-8:focus .emotion-5 {
  box-shadow: 0px 0px 0px 2px #ffffff,0px 0px 0px 4px #332e54;
  border-radius: 100%;
}

.emotion-4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
}

.emotion-0 {
  fill: currentColor;
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  cursor: pointer;
}

.emotion-6 {
  margin-left: 1rem;
  margin-top: 0.25rem;
  min-width: 125px;
  text-align: left;
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 1px solid;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 3rem;
  height: 3rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transition: background-color 350ms;
  transition: background-color 350ms;
  border-radius: 100%;
  background-color: transparent;
  border-color: #332e54;
}

.emotion-2:active,
.emotion-2:focus {
  outline: none;
}

<div
  aria-checked={false}
  className="emotion-8 emotion-9"
  onClick={[Function]}
  onKeyPress={[Function]}
  role="radio"
  tabIndex={0}
>
  <div
    className="emotion-4 emotion-5"
  >
    <div
      className="emotion-0 emotion-1"
      disabled={false}
    >
      <svg
        height={16}
        width={16}
      />
    </div>
    <div
      checked={false}
      className="emotion-2 emotion-3"
      disabled={false}
      size="large"
      type="primary"
    />
  </div>
  <p
    className="emotion-6 emotion-7"
  >
    SelectorButton Text
  </p>
</div>
`;

exports[`<SelectorButton /> UI snapshots when Icon added hides icon for checkbox with size 'small' 1`] = `
.emotion-4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
}

.emotion-0 {
  fill: currentColor;
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  cursor: pointer;
}

.emotion-6 {
  margin-left: 1rem;
  margin-top: 0.25rem;
  min-width: 125px;
  text-align: left;
}

.emotion-8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-bottom: 20px;
}

.emotion-8:focus {
  outline: none;
}

.emotion-8:focus .emotion-5 {
  box-shadow: 0px 0px 0px 2px #ffffff,0px 0px 0px 4px #332e54;
  border-radius: 4px;
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 1px solid;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 2rem;
  height: 2rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transition: background-color 350ms;
  transition: background-color 350ms;
  border-radius: 4px;
  background-color: transparent;
  border-color: #332e54;
}

.emotion-2:active,
.emotion-2:focus {
  outline: none;
}

<div
  aria-checked={false}
  className="emotion-8 emotion-9"
  onClick={[Function]}
  onKeyPress={[Function]}
  role="checkbox"
  tabIndex={0}
>
  <div
    className="emotion-4 emotion-5"
  >
    <div
      className="emotion-0 emotion-1"
      disabled={false}
    />
    <div
      checked={false}
      className="emotion-2 emotion-3"
      disabled={false}
      size="small"
      type="primary"
    />
  </div>
  <p
    className="emotion-6 emotion-7"
  >
    SelectorButton Text
  </p>
</div>
`;

exports[`<SelectorButton /> UI snapshots when Icon added hides icon for radio button size 'small' 1`] = `
.emotion-8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-bottom: 20px;
}

.emotion-8:focus {
  outline: none;
}

.emotion-8:focus .emotion-5 {
  box-shadow: 0px 0px 0px 2px #ffffff,0px 0px 0px 4px #332e54;
  border-radius: 100%;
}

.emotion-4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
}

.emotion-0 {
  fill: currentColor;
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  cursor: pointer;
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 1px solid;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 2rem;
  height: 2rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transition: background-color 350ms;
  transition: background-color 350ms;
  border-radius: 100%;
  background-color: transparent;
  border-color: #332e54;
}

.emotion-2:active,
.emotion-2:focus {
  outline: none;
}

.emotion-6 {
  margin-left: 1rem;
  margin-top: 0.25rem;
  min-width: 125px;
  text-align: left;
}

<div
  aria-checked={false}
  className="emotion-8 emotion-9"
  onClick={[Function]}
  onKeyPress={[Function]}
  role="radio"
  tabIndex={0}
>
  <div
    className="emotion-4 emotion-5"
  >
    <div
      className="emotion-0 emotion-1"
      disabled={false}
    />
    <div
      checked={false}
      className="emotion-2 emotion-3"
      disabled={false}
      size="small"
      type="primary"
    />
  </div>
  <p
    className="emotion-6 emotion-7"
  >
    SelectorButton Text
  </p>
</div>
`;

exports[`<SelectorButton /> UI snapshots when checked type is primary 1`] = `
.emotion-9 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-bottom: 20px;
}

.emotion-9:focus {
  outline: none;
}

.emotion-9:focus .emotion-6 {
  box-shadow: 0px 0px 0px 2px #ffffff,0px 0px 0px 4px #332e54;
  border-radius: 100%;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
}

.emotion-1 {
  fill: currentColor;
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  cursor: pointer;
}

.emotion-7 {
  margin-left: 1rem;
  margin-top: 0.25rem;
  min-width: 125px;
  text-align: left;
}

.emotion-0 {
  color: #ffffff;
}

.emotion-3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 1px solid;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 2rem;
  height: 2rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transition: background-color 350ms;
  transition: background-color 350ms;
  border-radius: 100%;
  background-color: #332e54;
  border-color: #332e54;
}

.emotion-3:active,
.emotion-3:focus {
  outline: none;
}

<div
  aria-checked={true}
  className="emotion-9 emotion-10"
  onClick={[Function]}
  onKeyPress={[Function]}
  role="radio"
  tabIndex={0}
>
  <div
    className="emotion-5 emotion-6"
  >
    <div
      className="emotion-1 emotion-2"
      disabled={false}
    >
      <svg
        className="emotion-0"
        height={8}
        width={8}
      />
    </div>
    <div
      checked={true}
      className="emotion-3 emotion-4"
      disabled={false}
      size="small"
      type="primary"
    />
  </div>
  <p
    className="emotion-7 emotion-8"
  >
    SelectorButton Text
  </p>
</div>
`;

exports[`<SelectorButton /> UI snapshots when checked type is secondary 1`] = `
.emotion-9 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-bottom: 20px;
}

.emotion-9:focus {
  outline: none;
}

.emotion-9:focus .emotion-6 {
  box-shadow: 0px 0px 0px 2px #ffffff,0px 0px 0px 4px #332e54;
  border-radius: 100%;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
}

.emotion-1 {
  fill: currentColor;
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  cursor: pointer;
}

.emotion-7 {
  margin-left: 1rem;
  margin-top: 0.25rem;
  min-width: 125px;
  text-align: left;
}

.emotion-0 {
  color: #ffffff;
}

.emotion-3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 1px solid;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 2rem;
  height: 2rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transition: background-color 350ms;
  transition: background-color 350ms;
  border-radius: 100%;
  background-color: #a6a1e2;
  border-color: #a6a1e2;
}

.emotion-3:active,
.emotion-3:focus {
  outline: none;
}

<div
  aria-checked={true}
  className="emotion-9 emotion-10"
  onClick={[Function]}
  onKeyPress={[Function]}
  role="radio"
  tabIndex={0}
>
  <div
    className="emotion-5 emotion-6"
  >
    <div
      className="emotion-1 emotion-2"
      disabled={false}
    >
      <svg
        className="emotion-0"
        height={8}
        width={8}
      />
    </div>
    <div
      checked={true}
      className="emotion-3 emotion-4"
      disabled={false}
      size="small"
      type="secondary"
    />
  </div>
  <p
    className="emotion-7 emotion-8"
  >
    SelectorButton Text
  </p>
</div>
`;

exports[`<SelectorButton /> UI snapshots when children is a node 1`] = `
.emotion-8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-bottom: 20px;
}

.emotion-8:focus {
  outline: none;
}

.emotion-8:focus .emotion-5 {
  box-shadow: 0px 0px 0px 2px #ffffff,0px 0px 0px 4px #332e54;
  border-radius: 100%;
}

.emotion-4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
}

.emotion-0 {
  fill: currentColor;
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  cursor: pointer;
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 1px solid;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 2rem;
  height: 2rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transition: background-color 350ms;
  transition: background-color 350ms;
  border-radius: 100%;
  background-color: transparent;
  border-color: #332e54;
}

.emotion-2:active,
.emotion-2:focus {
  outline: none;
}

.emotion-6 {
  margin-left: 1rem;
  margin-top: 0.25rem;
  min-width: 125px;
  text-align: left;
}

<div
  aria-checked={false}
  className="emotion-8 emotion-9"
  onClick={[Function]}
  onKeyPress={[Function]}
  role="radio"
  tabIndex={0}
>
  <div
    className="emotion-4 emotion-5"
  >
    <div
      className="emotion-0 emotion-1"
      disabled={false}
    />
    <div
      checked={false}
      className="emotion-2 emotion-3"
      disabled={false}
      size="small"
      type="primary"
    />
  </div>
  <p
    className="emotion-6 emotion-7"
  >
    SelectorButton Text
  </p>
</div>
`;

exports[`<SelectorButton /> UI snapshots when children is undefined 1`] = `
.emotion-6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-bottom: 20px;
}

.emotion-6:focus {
  outline: none;
}

.emotion-6:focus .emotion-5 {
  box-shadow: 0px 0px 0px 2px #ffffff,0px 0px 0px 4px #332e54;
  border-radius: 100%;
}

.emotion-4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
}

.emotion-0 {
  fill: currentColor;
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  cursor: pointer;
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 1px solid;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 2rem;
  height: 2rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transition: background-color 350ms;
  transition: background-color 350ms;
  border-radius: 100%;
  background-color: transparent;
  border-color: #332e54;
}

.emotion-2:active,
.emotion-2:focus {
  outline: none;
}

<div
  aria-checked={false}
  className="emotion-6 emotion-7"
  onClick={[Function]}
  onKeyPress={[Function]}
  role="radio"
  tabIndex={0}
>
  <div
    className="emotion-4 emotion-5"
  >
    <div
      className="emotion-0 emotion-1"
      disabled={false}
    />
    <div
      checked={false}
      className="emotion-2 emotion-3"
      disabled={false}
      size="small"
      type="primary"
    />
  </div>
</div>
`;

exports[`<SelectorButton /> UI snapshots when is checkbox 1`] = `
.emotion-4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
}

.emotion-0 {
  fill: currentColor;
  left: 50%;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  cursor: pointer;
}

.emotion-6 {
  margin-left: 1rem;
  margin-top: 0.25rem;
  min-width: 125px;
  text-align: left;
}

.emotion-8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-bottom: 20px;
}

.emotion-8:focus {
  outline: none;
}

.emotion-8:focus .emotion-5 {
  box-shadow: 0px 0px 0px 2px #ffffff,0px 0px 0px 4px #332e54;
  border-radius: 4px;
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 1px solid;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 2rem;
  height: 2rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transition: background-color 350ms;
  transition: background-color 350ms;
  border-radius: 4px;
  background-color: transparent;
  border-color: #332e54;
}

.emotion-2:active,
.emotion-2:focus {
  outline: none;
}

<div
  aria-checked={false}
  className="emotion-8 emotion-9"
  onClick={[Function]}
  onKeyPress={[Function]}
  role="checkbox"
  tabIndex={0}
>
  <div
    className="emotion-4 emotion-5"
  >
    <div
      className="emotion-0 emotion-1"
      disabled={false}
    />
    <div
      checked={false}
      className="emotion-2 emotion-3"
      disabled={false}
      size="small"
      type="primary"
    />
  </div>
  <p
    className="emotion-6 emotion-7"
  >
    SelectorButton Text
  </p>
</div>
`;
